--- a/Javascript 쇼핑몰 미니게임 과제/index.html
+++ b/Javascript 쇼핑몰 미니게임 과제/index.html
@@ -4,36 +4,34 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Online Shopping</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <script src="src/main.js" defer></script>
   </head>
   <body>
-    <!-- Logo -->
-    <img src="./img/logo.png" alt="" class="logo">
-
-    <!-- Buttons -->
-    <div class="buttons">
+    <!-- 로고 -->
+    <img src="./img/logo.png" alt="logo" class="logo">
+    <!-- 버튼 -->
+    <section class="buttons">
       <button class="btn">
-        <img src="./img/blue_t.png" alt="tshirt" class="imgBtn">
+        <img src="./img/blue_t.png" alt="tshirt" class="imgBtn" data-key="type" data-value="tshirt">
       </button>
       <button class="btn">
-        <img src="./img/blue_p.png" alt="pants" class="imgBtn">
+        <img src="./img/blue_p.png" alt="pants" class="imgBtn" data-key="type" data-value="pants">
       </button>
       <button class="btn">
-        <img src="./img/blue_s.png" alt="skirt" class="imgBtn">
+        <img src="./img/blue_s.png" alt="skirt" class="imgBtn" data-key="type" data-value="skirt">
       </button>
-      <button class="btn colorBtn blue">
+      <button class="btn colorBtn blue" data-key="color" data-value="blue">
         Blue
       </button>
-      <button class="btn colorBtn yellow">
+      <button class="btn colorBtn yellow" data-key="color" data-value="yellow">
         Yellow
       </button>
-      <button class="btn colorBtn pink">
+      <button class="btn colorBtn pink" data-key="color" data-value="pink">
         Pink
       </button>
-    </div>
-    
-    <!-- Items -->
+    </section>
+     <!-- 아이템-->
     <ul class="items"></ul>
   </body>
 </html>
